Cleanup and update

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "bjs",
-  "namespace": "improvein",
   "version": "0.1.0",
   "description": "Bitcoin Javascript API, mainly for browser interaction",
-  "main": "index.js",
+  "main": "src/bjs.js",
   "directories": {
     "src": "./src"
   },
@@ -19,8 +18,6 @@
   "author": "Improve-in",
   "license": "MIT",
   "dependencies": {
-    "bitcoinjs-lib": "^3.3.2",
-    "xhr2": "^0.1.4",
-    "xmlhttprequest": "^1.8.0"
+    "bitcoinjs-lib": "^3.3.2"
   }
 }
